--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.header {
+    width: clamp(300px, 50%, 800px);
+}
+
 section{
     background-image: url(./assets/background.jpg);
     background-size: cover;
@@ -255,8 +259,9 @@ a {
   height: 150px;
   width: 150px;
   border-radius: 75px;
-  border: 1px solid rgb(255, 255, 255);
+  border: 3px solid rgb(0, 0, 0);
   margin: 0 auto 30px;
+  overflow: hidden;
 }
 
 .user-image {
